# mids-capstone-aviation-safety-search-engine

./: .gitattributes  .gitignore  BEGINNER_PUSH_GUIDE.md  DEMO_WALKTHROUGH.md  DEPLOYMENT_SEQUENTIAL_CHECKLIST.md  DOCUMENTATION.md  Evaluation_Metrics_01.ipynb  GITHUB_AND_TEAM.md  PUSH_TO_GITHUB_STEPS.md  README.md  TESTING_WALKTHROUGH.md  batch_runner.py  docker-compose.yml  finalize_from_cache.py  retrieval_metrics.py
.k8s/: cluster.yaml
.k8s/base/: deployment-backend-bm25.yaml  deployment-backend-embeddings.yaml  deployment-backend-main.yaml  deployment-frontend.yaml  deployment-qdrant.yaml  kustomization.yaml  service-backend-bm25.yaml  service-backend-embeddings.yaml  service-backend-main.yaml  service-frontend.yaml  service-qdrant.yaml
.k8s/overlays/dev/: env-deployment-backend-main.yaml  kustomization.yaml  lb-service-backend-bm25.yaml  (+5 more)
backend/: Dockerfile  EVALUATION_NARRATIVE.md  MODEL_COMPARISON_RESULTS.md  build_semantic_index.py  comprehensive_model_evaluation.py  pyproject.toml  test_aviation_bert.py
backend/bm25/: .dockerignore  Dockerfile  pyproject.toml
backend/bm25/src/: main.py
backend/bm25/src/controllers/: search.py
backend/bm25/src/models/: bm25_service.py
backend/bm25/src/routes/: search.py
backend/bm25/src/schemas/: search.py
backend/embeddings/: Dockerfile  pyproject.toml
backend/embeddings/src/: main.py  seed.py
backend/embeddings/src/controllers/: search.py
backend/embeddings/src/models/: search.py
backend/embeddings/src/routes/: search.py
backend/embeddings/src/schemas/: search.py
backend/embeddings/tests/: get_points_count.py
backend/main_driver/: .dockerignore  Dockerfile  pyproject.toml
backend/main_driver/src/: main.py
backend/main_driver/src/controllers/: bedrock.py  search.py
backend/main_driver/src/models/: cache.py  data.py  db.py  search.py
backend/main_driver/src/routes/: db.py  search.py
backend/main_driver/src/schemas/: db.py  search.py
backend/qdrant-init/: Dockerfile  pyproject.toml
backend/qdrant-init/src/: init_qdrant.py
backend/scripts/: build_bm25_index.py
backend/src/: db.py  main.py
backend/src/controllers/: data.py
backend/src/models/: .gitkeep  bm25_service.py  hybrid_service.py  query_expansion.py  semantic_service.py
backend/src/routes/: data.py
backend/src/scripts/evaluation/: metrics.py  query_generation.py
frontend/: .dockerignore  Dockerfile  package.json  react_env.sh
frontend/src/: index.js  nginx.conf
scripts/: build_containers.sh  create_dev_environment.sh  delete_prod_cluster.sh  deploy_local_vector_db.sh  deploy_prod_cluster.sh  get_frontend_ip.sh  push_containers_ecr.sh
src/: cli.py
src/search/: config.py
synth/: __init__.py  builder.py  cache.py  config.py  data.py  llm.py  mining.py
(+33 files in other folders)
