[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Schaefer",email = "rschaefer1@me.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "datasets (>=4.5.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
