[tool.poetry]
name = "aviation-safety-search"
version = "0.1.0"
description = "Aviation Safety Search Engine with Semantic and Hybrid Retrieval"
authors = ["Ryan Schaefer <rschaefer1@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.128.0"}
datasets = "^4.5.0"
polars = "^1.38.1"
sentence-transformers = "^3.0.0"
torch = "^2.0.0"
numpy = "^1.24.0,<2.0.0"
scikit-learn = "^1.3.0,<1.8.0"
faiss-cpu = "^1.7.0"
protobuf = "^6.33.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
