[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Schaefer",email = "rschaefer1@me.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "polars (>=1.38.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
