[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Schaefer",email = "rschaefer1@me.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.42.71,<2.0.0)",
    "polars (>=1.39.2,<2.0.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "humanize (>=4.15.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
